--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
+    <h1>Odin recipes</h1>
+    <ol><a href="recipes/falafel.html">Falafel</a>
+        <a href="recipes/pecanpie.html">Pecan Pie</a>
+        <a href="recipes/onionsoup.html">Onion Soup</a>
+    </ol>
     
 </body>
 </html>
